fix: hover on mobile and add animation on hover

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -29,7 +29,7 @@ body {
   max-height: 100vh;
 
   font-family: 'Poiret One';
-  background-color: #261712;
+  background-color: #121212;
   color: white;
 }
 
@@ -53,23 +53,20 @@ input {
   padding: 1em;
   border-radius: 10px;
   border: none;
-  background-color: #F2E3D5;
+  background-color: #f2e3d5;
   box-shadow: 3px 3px 5px rgb(24, 24, 24);
   font-family: 'Bebas Neue', cursive;
-  font-size: 1.5em;
+  font-size: 1.4rem;
   cursor: pointer;
-}
+  outline: none;
 
-input:hover {
-  background-color: rgba(255, 255, 255, 0.068);
-  color: white;
-
+  transition: 0.5s ease;
 }
 
 .calculator {
-  margin: 2em;
+  margin-top: 1rem;
   max-width: 768px;
-  padding: 2em;
+  padding: 1rem;
   border: 2px solid white;
   border-radius: 10px;
   box-shadow: 3px 3px 5px black;
@@ -99,22 +96,22 @@ output {
   align-items: center;
 }
 
-.display>output:nth-child(1) {
-  font-size: .8em;
+.display > output:nth-child(1) {
+  font-size: 0.8em;
 }
 
 .buttons {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: .7em;
+  gap: 0.7em;
 }
 
 .operators {
-  background-color: #BFA38A;
+  background-color: #bfa38a;
 }
 
 .equals {
-  background-color: #8C6C5A;
+  background-color: #8c6c5a;
 }
 
 .span-3 {
@@ -155,5 +152,13 @@ body {
 @media screen and (min-width: 1200px) {
   body {
     font-size: 19px;
+  }
+}
+
+/* Hover Styles */
+@media (hover: hover) and (pointer: fine) {
+  input:hover {
+    background-color: rgba(255, 255, 255, 0.068);
+    color: white;
   }
 }
